# Beatblock-Oneclick

./: Cargo.toml  README.md
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos-x86.yml  build-windows.yml  build.yml
src/: downloader.rs  main.rs  settings.rs  updater.rs
