[package]
name = "oneclick"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket server
tokio = "1.41.0"
tokio-tungstenite = "0.24.0"
futures = "0.3"

reqwest = { version = "0.11", features = ["rustls-tls"] }

dirs = "5.0.1"

# Handles URLs
system_uri = { git = "https://github.com/BigBadE/system_uri" }

# Error handling
anyhow = "1.0.89"

# File formats
zip = "2.2.0"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = "2.5.2"